--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,36 @@
 </head>
 
 <body>
-  <div id="myapp"></div>
+  <div class="container">
+    <div class="text-center">
+      <img src="images/lightning.png" alt="Lightning" style="max-height: 300px; max-width: 300px" />
+      <div id="myapp"></div>
+    </div>
+    <div style="height: 60px;" />
+    <div class="fixed-bottom p-2 bg-white">
+      <div class="row">
+        <div class="col order-md-last">
+          <div class="float-md-end">
+            Lightning Distance Calculator by
+            <a href="https://github.com/aquacash5/" target="_blank" title="Github">
+              Kyle Bloom
+            </a>
+          </div>
+        </div>
+        <div class="w-100 d-md-none d-block"></div>
+        <div class="col">
+          Lightning by
+          <a href="https://thenounproject.com/icon/lightning-759722/" target="_blank" title="Lightning Icons">
+            b a r z i n
+          </a>
+          from
+          <a href="https://thenounproject.com/" target="_blank" title="Lightning Icons">
+            Noun Project
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
   <script>
     var app = Elm.Main.init({
       node: document.getElementById('myapp')
